tests/org.eclipse.n4js.bugreports.tests/xt-tests/IDEBUG_0210_TypeArgInference_AmbiguousUnionType1.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.bugreports.tests.SpecXtTest END_SETUP  */


class A {}

class G<T> {}

function <T> foo( param : union{T,G<T>} ) : T {return null;}

// XPECT noerrors -->
var x : number = foo ( new G<number>() ); // error: "union{G<number>,number} is not a subtype of number." at "foo ( new G<number>() )"
